--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apéritif</title>
+  <title>Cook Tail</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="Découvrez les meilleurs cocktails sur Cook Tail. Cuisine, partage et savoure tes créations.">
   <meta property="og:title" content="Cook Tail - Cuisine tes cocktails">
@@ -23,7 +23,7 @@
       <div class="banner-text">
         <h1>Cook Tail</h1>
         <p>Cuisine ton meilleurs cocktails.</p>
-        <a href="#" class="btn" aria-label="Réagir en ligne">Réagir en ligne</a>
+        <a href="../cocktails/cocktails.html"class="btn" aria-label="Réagir en ligne">Réagir en ligne</a>
       </div>
     </div>
   </section>
