--- a/public/cocktails/cocktails.html
+++ b/public/cocktails/cocktails.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cocktails</title>
+  <title>Cook Tail</title>
   <link rel="stylesheet" href="cocktails.css">
   <style>
     /* Global Styles */
