--- a/public/verify.html
+++ b/public/verify.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vérification</title>
+  <title>Cook Tail</title>
   <link rel="stylesheet" href="css/style.css">
   <style>
     /* Styles pour centraliser et élargir le conteneur */
